# rimze

./: .gitignore  Agents.md  Cargo.toml  LICENSE  PLAN.md  README.md
src/: content.rs  main.rs  view.rs
